force-app/main/default/objects/ParametrosAtendimento__mdt/ParametrosAtendimento__mdt.object-meta.xml
<CustomObject>
    <description>Consolida parâmetros operacionais de atendimento por unidade de negócio, reunindo configurações de categorização, survey, canais de messaging e roteamento de e-mail.</description>
    <label>Parâmetros de Atendimento</label>
    <pluralLabel>Parâmetros de Atendimento</pluralLabel>
</CustomObject>