force-app/main/default/objects/ParametrosAtendimento__mdt/fields/AllowSameDaySurvey__c.field-meta.xml
<CustomField>
    <fullName>AllowSameDaySurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite enviar survey no mesmo dia do encerramento do atendimento.</description>
    <label>Permitir Survey no Mesmo Dia</label>
    <type>Checkbox</type>
</CustomField>