force-app/main/default/objects/ParametrosAtendimento__mdt/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Habilita ou desabilita o conjunto de parâmetros da unidade de negócio.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>