force-app/main/default/objects/ParametrosAtendimento__mdt/fields/BlockedInternalDomain__c.field-meta.xml
<CustomField>
    <fullName>BlockedInternalDomain__c</fullName>
    <description>Lista de domínios internos bloqueados para envio de survey.</description>
    <label>Domínios Internos Bloqueados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>