force-app/main/default/objects/ParametrosAtendimento__mdt/fields/BrandAccentColor__c.field-meta.xml
<CustomField>
    <fullName>BrandAccentColor__c</fullName>
    <description>Cor de destaque aplicada à survey da unidade.</description>
    <label>Brand Accent Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>