force-app/main/default/objects/ParametrosAtendimento__mdt/fields/BrandLogoResourceName__c.field-meta.xml
<CustomField>
    <fullName>BrandLogoResourceName__c</fullName>
    <description>Static Resource do logo usado na survey/e-mails da unidade.</description>
    <label>Brand Logo Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>