force-app/main/default/objects/ParametrosAtendimento__mdt/fields/BrandPrimaryColor__c.field-meta.xml
<CustomField>
    <fullName>BrandPrimaryColor__c</fullName>
    <description>Cor primária de marca aplicada à survey da unidade.</description>
    <label>Brand Primary Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>