force-app/main/default/objects/ParametrosAtendimento__mdt/fields/BrandSecondaryColor__c.field-meta.xml
<CustomField>
    <fullName>BrandSecondaryColor__c</fullName>
    <description>Cor secundária de marca aplicada à survey da unidade.</description>
    <label>Brand Secondary Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>