force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CanalOrigem__c.field-meta.xml
<CustomField>
    <fullName>CanalOrigem__c</fullName>
    <description>Canal de origem associado à rota de e-mail.</description>
    <label>Canal de Origem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>