force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CaseClosureTemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CaseClosureTemplateDeveloperName__c</fullName>
    <description>DeveloperName do template de e-mail de encerramento de Case em português, usado quando a Survey não for enviada.</description>
    <label>Case Closure Template DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>