force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CaseClosureTemplateDeveloperNameEN__c.field-meta.xml
<CustomField>
    <fullName>CaseClosureTemplateDeveloperNameEN__c</fullName>
    <description>DeveloperName do template de e-mail de encerramento de Case em inglês, usado quando a Survey não for enviada.</description>
    <label>Case Closure Template DeveloperName EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>