force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CaseOpeningTemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CaseOpeningTemplateDeveloperName__c</fullName>
    <description>DeveloperName do template de e-mail de abertura de Case em português.</description>
    <label>Case Opening Template DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>