force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CaseOpeningTemplateDeveloperNameEN__c.field-meta.xml
<CustomField>
    <fullName>CaseOpeningTemplateDeveloperNameEN__c</fullName>
    <description>DeveloperName do template de e-mail de abertura de Case em inglês, quando aplicável.</description>
    <label>Case Opening Template DeveloperName EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>