force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>CaseOrigin__c</fullName>
    <description>Valor de origem do Case aplicado na rota de e-mail.</description>
    <label>Case Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>