force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CaseRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordTypeDeveloperName__c</fullName>
    <description>DeveloperName do Record Type principal de Case para a unidade.</description>
    <label>Case Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>