force-app/main/default/objects/ParametrosAtendimento__mdt/fields/ClosedCaseBehavior__c.field-meta.xml
<CustomField>
    <fullName>ClosedCaseBehavior__c</fullName>
    <description>Comportamento ao receber e-mail para um case fechado: REOPEN, IGNORE ou RELATE.</description>
    <label>Comportamento Case Fechado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REOPEN</fullName>
                <default>true</default>
                <label>REOPEN</label>
            </value>
            <value>
                <fullName>IGNORE</fullName>
            </value>
            <value>
                <fullName>RELATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>