force-app/main/default/objects/ParametrosAtendimento__mdt/fields/CreateContentFiles__c.field-meta.xml
<CustomField>
    <fullName>CreateContentFiles__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se os anexos do e-mail devem ser criados como Content Files no case.</description>
    <label>Criar Content Files</label>
    <type>Checkbox</type>
</CustomField>