force-app/main/default/objects/ParametrosAtendimento__mdt/fields/DefaultLanguage__c.field-meta.xml
<CustomField>
    <fullName>DefaultLanguage__c</fullName>
    <description>Idioma padrão de comunicação da unidade para survey.</description>
    <label>Idioma Padrão</label>
    <length>40</length>
    <type>Text</type>
</CustomField>