force-app/main/default/objects/ParametrosAtendimento__mdt/fields/DefaultQueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DefaultQueueDeveloperName__c</fullName>
    <description>DeveloperName da fila padrão da unidade para encaminhamento operacional.</description>
    <label>Fila Padrão da Unidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>