force-app/main/default/objects/ParametrosAtendimento__mdt/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição funcional consolidada dos parâmetros de atendimento da unidade.</description>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>