force-app/main/default/objects/ParametrosAtendimento__mdt/fields/EmailFooterText__c.field-meta.xml
<CustomField>
    <fullName>EmailFooterText__c</fullName>
    <description>Texto do rodapé dos e-mails de survey.</description>
    <label>Texto do Rodapé do E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>