force-app/main/default/objects/ParametrosAtendimento__mdt/fields/EmailLanguage__c.field-meta.xml
<CustomField>
    <fullName>EmailLanguage__c</fullName>
    <description>Idioma usado na composição dos e-mails de survey.</description>
    <label>Idioma do E-mail</label>
    <length>40</length>
    <type>Text</type>
</CustomField>