force-app/main/default/objects/ParametrosAtendimento__mdt/fields/EmailTemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateDeveloperName__c</fullName>
    <description>DeveloperName do template principal de e-mail de survey.</description>
    <label>Email Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>