force-app/main/default/objects/ParametrosAtendimento__mdt/fields/EmailTemplateDeveloperNameEN__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateDeveloperNameEN__c</fullName>
    <description>DeveloperName do template de e-mail em inglês.</description>
    <label>Email Template Developer Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>