force-app/main/default/objects/ParametrosAtendimento__mdt/fields/FilaCategorizacaoDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>FilaCategorizacaoDeveloperName__c</fullName>
    <description>DeveloperName da fila de categorização associada à rota de e-mail.</description>
    <label>Fila de Categorização Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>