force-app/main/default/objects/ParametrosAtendimento__mdt/fields/GerarReclamacaoNoEncerramento__c.field-meta.xml
<CustomField>
    <fullName>GerarReclamacaoNoEncerramento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se true, ao encerrar um Case com Tipo de Caso = Reclamação desta unidade, gera automaticamente o registro espelho em Reclamacao__c.</description>
    <label>Gerar Reclamação no Encerramento</label>
    <type>Checkbox</type>
</CustomField>