force-app/main/default/objects/ParametrosAtendimento__mdt/fields/MatchMode__c.field-meta.xml
<CustomField>
    <fullName>MatchMode__c</fullName>
    <description>Modo de comparação usado para casar a rota de e-mail recebida.</description>
    <label>Match Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>