force-app/main/default/objects/ParametrosAtendimento__mdt/fields/MessagingChannelDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>MessagingChannelDeveloperName__c</fullName>
    <description>DeveloperName do canal principal de messaging da unidade.</description>
    <label>Messaging Channel Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>