force-app/main/default/objects/ParametrosAtendimento__mdt/fields/MessagingChannelType__c.field-meta.xml
<CustomField>
    <fullName>MessagingChannelType__c</fullName>
    <description>Tipo do canal de messaging associado à unidade.</description>
    <label>Messaging Channel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>