force-app/main/default/objects/ParametrosAtendimento__mdt/fields/MessagingFallbackQueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>MessagingFallbackQueueDeveloperName__c</fullName>
    <description>DeveloperName da fila de fallback para o canal de messaging.</description>
    <label>Messaging Fallback Queue Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>