force-app/main/default/objects/ParametrosAtendimento__mdt/fields/MessagingTargetQueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>MessagingTargetQueueDeveloperName__c</fullName>
    <description>DeveloperName da fila de destino principal para o canal de messaging.</description>
    <label>Messaging Target Queue Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>