force-app/main/default/objects/ParametrosAtendimento__mdt/fields/OrgWideEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddress__c</fullName>
    <description>Endereço de e-mail organizacional usado na comunicação de survey.</description>
    <label>Org-Wide Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>