force-app/main/default/objects/ParametrosAtendimento__mdt/fields/QueueDeveloperNamePrefix__c.field-meta.xml
<CustomField>
    <fullName>QueueDeveloperNamePrefix__c</fullName>
    <description>Prefixo usado para localizar filas relacionadas à unidade.</description>
    <label>Prefixo das Filas</label>
    <length>80</length>
    <type>Text</type>
</CustomField>