force-app/main/default/objects/ParametrosAtendimento__mdt/fields/ReclamacaoAreaValue__c.field-meta.xml
<CustomField>
    <fullName>ReclamacaoAreaValue__c</fullName>
    <description>Valor de picklist a gravar em Reclamacao__c.Area__c/Unidade__c na geração automática (os valores desses picklists não são idênticos aos de Case.UnidadeNegocio__c).</description>
    <label>Valor de Área da Reclamação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>