force-app/main/default/objects/ParametrosAtendimento__mdt/fields/ReclamacaoRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ReclamacaoRecordTypeDeveloperName__c</fullName>
    <description>DeveloperName do Record Type de Reclamacao__c a usar na geração automática para esta unidade.</description>
    <label>Reclamação Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>