force-app/main/default/objects/ParametrosAtendimento__mdt/fields/RelateNewCaseToOriginal__c.field-meta.xml
<CustomField>
    <fullName>RelateNewCaseToOriginal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla se o novo case criado pela rota deve se relacionar ao original.</description>
    <label>Relacionar Novo Case ao Original</label>
    <type>Checkbox</type>
</CustomField>