force-app/main/default/objects/ParametrosAtendimento__mdt/fields/ReopenClosedCase__c.field-meta.xml
<CustomField>
    <fullName>ReopenClosedCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla se a rota pode reabrir caso fechado.</description>
    <label>Reabrir Case Fechado</label>
    <type>Checkbox</type>
</CustomField>