force-app/main/default/objects/ParametrosAtendimento__mdt/fields/ReopenWindowMinutes__c.field-meta.xml
<CustomField>
    <fullName>ReopenWindowMinutes__c</fullName>
    <description>Janela de tempo em minutos para reabertura de caso na rota de e-mail.</description>
    <label>Janela de Reabertura em Minutos</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>