force-app/main/default/objects/ParametrosAtendimento__mdt/fields/RouteOwnerDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RouteOwnerDeveloperName__c</fullName>
    <description>DeveloperName do owner padrão usado na rota de e-mail.</description>
    <label>Route Owner Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>