force-app/main/default/objects/ParametrosAtendimento__mdt/fields/RouteOwnerUsername__c.field-meta.xml
<CustomField>
    <fullName>RouteOwnerUsername__c</fullName>
    <description>Username do owner quando a rota de e-mail aponta para usuário.</description>
    <label>Route Owner Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>