force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SalesforceServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>SalesforceServiceAddress__c</fullName>
    <description>Service address da Salesforce para recebimento do e-mail roteado.</description>
    <label>Salesforce Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>