force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SendCaseOpeningEmail__c.field-meta.xml
<CustomField>
    <fullName>SendCaseOpeningEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla se a unidade envia e-mail transacional de abertura quando o Case é criado com contato preenchido.</description>
    <label>Enviar E-mail de Abertura do Case</label>
    <type>Checkbox</type>
</CustomField>