force-app/main/default/objects/ParametrosAtendimento__mdt/fields/ShowDailySurveyIndicator__c.field-meta.xml
<CustomField>
    <fullName>ShowDailySurveyIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla a exibição do indicador diário de survey.</description>
    <label>Exibir Indicador de Envio Diário</label>
    <type>Checkbox</type>
</CustomField>