force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SurveyCommunityUrlPathPrefix__c.field-meta.xml
<CustomField>
    <fullName>SurveyCommunityUrlPathPrefix__c</fullName>
    <description>Prefixo do path da comunidade usada para responder a survey.</description>
    <label>Survey Community URL Path Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>