force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SurveyDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SurveyDeveloperName__c</fullName>
    <description>DeveloperName da survey principal em idioma padrão.</description>
    <label>Survey Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>