force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SurveyDeveloperNameEN__c.field-meta.xml
<CustomField>
    <fullName>SurveyDeveloperNameEN__c</fullName>
    <description>DeveloperName da survey em inglês, quando aplicável.</description>
    <label>Survey Developer Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>