force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SurveyMode__c.field-meta.xml
<CustomField>
    <fullName>SurveyMode__c</fullName>
    <description>Estratégia de envio da pesquisa de satisfação da unidade.</description>
    <label>Modo de Envio da Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALWAYS</fullName>
                <default>true</default>
                <label>ALWAYS</label>
            </value>
            <value>
                <fullName>OPTIONAL</fullName>
            </value>
            <value>
                <fullName>NEVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>