force-app/main/default/objects/ParametrosAtendimento__mdt/fields/SurveyVersionName__c.field-meta.xml
<CustomField>
    <fullName>SurveyVersionName__c</fullName>
    <description>Nome da versão da survey usada pela unidade.</description>
    <label>Survey Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>