force-app/main/default/objects/ParametrosAtendimento__mdt/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <description>Identificador canônico da unidade de negócio atendida por este registro consolidado.</description>
    <label>Unidade de Negócio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>