force-app/main/default/objects/ParametrosAtendimento__mdt/fields/VerifyDailySurvey__c.field-meta.xml
<CustomField>
    <fullName>VerifyDailySurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla se a unidade verifica envio diário de survey.</description>
    <label>Verificar Envio Diário</label>
    <type>Checkbox</type>
</CustomField>