force-app/main/default/objects/ParametrosAtendimento__mdt/fields/WhatsAppChannelDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppChannelDeveloperName__c</fullName>
    <description>DeveloperName do canal de WhatsApp associado à unidade de negócio.</description>
    <inlineHelpText>Use o nome técnico do canal WhatsApp no padrão WhatsApp+UnidadeNegocio, por exemplo WhatsAppTeconSalvador.</inlineHelpText>
    <label>WhatsApp Channel Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>